# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\Admin\UserManagementController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -27,7 +28,9 @@ Route::middleware('auth:sanctum')->group(function () {
     /**
      * Admin APIs
      */
-    Route::middleware('role:super-admin')->group(function () {
-        // admin-only routes (user management, products later)
+    Route::middleware('role:super-admin')->prefix('admin')->group(function () {
+        Route::get('/users', [UserManagementController::class, 'index']);
+        Route::get('/users/{id}', [UserManagementController::class, 'show']);
+        Route::patch('/users/{id}/status', [UserManagementController::class, 'updateStatus']);
     });
 });
